# syntesa-lab-attendance-rest-api

./: pyproject.toml
app/: database.py  main.py  manage.py  models.py  seed_db.py
app/routers/: attendance.py  auth.py
